Edited wiki page through web user interface.

--- a/wiki/MooplusSapshot.wiki
+++ b/wiki/MooplusSapshot.wiki
@@ -15,7 +15,6 @@ I will be updation as long as it goes<br/>
 
 
 I happy announced that the developement process is going well for now . 
-after three days from the start of the developement process here is the second screen shot;
- with 5 controls developped and integrated.<br/>
+after three days from the start of the developement process here is the second screen shot; with 5 controls developped and integrated.<br/>
 
 <img src="http://lh6.ggpht.com/_fFQl_ef5IGI/S7VE6DagnYI/AAAAAAAAAFs/X4B1u-wl9oI/s800/screenshot2.png" />
