--- a/wiki/MooplusSapshot.wiki
+++ b/wiki/MooplusSapshot.wiki
@@ -18,3 +18,7 @@ I am happy announced that the developement process is going well for now .
 after three days from the start of the developement process here is the second screen shot; with 5 controls developped and integrated.<br/>
 
 <img src="http://lh6.ggpht.com/_fFQl_ef5IGI/S7VE6DagnYI/AAAAAAAAAFs/X4B1u-wl9oI/s800/screenshot2.png" />
+
+Snapshot 3:
+
+<img src="http://lh4.ggpht.com/_fFQl_ef5IGI/S7n2TxR_Z3I/AAAAAAAAAF0/_ELBbedeCzY/s144/snapshot3.png" />
