Edited wiki page through web user interface.

--- a/wiki/MooplusSapshot.wiki
+++ b/wiki/MooplusSapshot.wiki
@@ -22,3 +22,6 @@ after three days from the start of the developement process here is the second s
 Snapshot 3:
 
 <img src="http://lh4.ggpht.com/_fFQl_ef5IGI/S7n2TxR_Z3I/AAAAAAAAAF0/_ELBbedeCzY/s800/snapshot3.png" />
+
+<br/>
+<img src="http://lh5.ggpht.com/_fFQl_ef5IGI/S7uK0eYA0ZI/AAAAAAAAAF8/lZ1sVbKQ1yI/s800/snapshot3.png" />
